jira_clone/force-app/main/default/objects/Sprint__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Sprint end date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>