jira_clone/force-app/main/default/objects/Sprint__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Sprint goal</description>
    <label>Goal</label>
    <type>TextArea</type>
</CustomField>