jira_clone/force-app/main/default/objects/Sprint__c/fields/MaxScore__c.field-meta.xml
<CustomField>
    <fullName>MaxScore__c</fullName>
    <description>Current highest Ticket__c.Score__c assigned in this sprint, padded to 6 digits. Seeded to 000000 on sprint creation and incremented by 200 on each ticket added / moved in. Used instead of MAX(Score__c) SOQL because Score__c is unindexed.</description>
    <label>Max Score</label>
    <length>6</length>
    <type>Text</type>
</CustomField>