jira_clone/force-app/main/default/objects/Sprint__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Sprint start date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>