jira_clone/force-app/main/default/objects/Sprint__c/fields/TotalEndedStoryPoint__c.field-meta.xml
<CustomField>
    <fullName>TotalEndedStoryPoint__c</fullName>
    <description>Total story points of completed tickets in this sprint</description>
    <label>Total Ended Story Point</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>