jira_clone/force-app/main/default/objects/Sprint__c/fields/TotalStoryPoint__c.field-meta.xml
<CustomField>
    <fullName>TotalStoryPoint__c</fullName>
    <description>Total story points of all tickets in this sprint</description>
    <label>Total Story Point</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>